# HelpSecure

./: package-lock.json  package.json
api/: Cargo.toml  app.db  build.rs  refactor.py  test_crud.sh
api/doc/: api-desenvolvimento.md  documentacao_backend.txt  rules.md  tarefa.md
api/examples/: face_test.rs  hash.rs
api/rules/: api-desenvolvimento.md
api/src/: auth.rs  camera_ws.rs  db.rs  main.rs  polyfill.c
firmware/: compile_commands.json  platformio.ini
firmware/src/: main.cpp
firmware/src/camera/: Camera.cpp  Camera.h
firmware/src/network/: Request.cpp  Request.h  Websocket.cpp  Websocket.h
firmware/src/sonico/: Sonico.cpp  Sonico.hpp
firmware/test/: main.html  package-lock.json  package.json  server.js
frontend/: App.tsx  api-desenvolvimento.md  app.json  implementation_summary.md  package-lock.json  package.json
frontend/src/components/: AuthHeaderIcon.tsx  AuthInput.tsx  ErrorBanner.tsx  PrimaryButton.tsx
frontend/src/models/: User.ts  local.ts  models.ts  visitantes.ts
frontend/src/services/: api.ts  authService.ts  cameraService.ts  localService.ts  logService.ts  visitanteService.ts
frontend/src/viewmodels/: useCameraViewModel.ts  useHomeViewModel.ts  useLocalViewModel.ts  useLoginViewModel.ts  useLogsViewModel.ts  useNovoVisitanteViewModel.ts  useRegisterViewModel.ts  useSettingsViewModel.ts  useVisitantesListViewModel.ts
frontend/src/views/: CameraView.tsx  HomeTabView.tsx  HomeView.tsx  ListaVisitantesView.tsx  LocalView.tsx  LoginView.tsx  (+4 more)
frontend/test/: LoginView.test.tsx  authService.test.ts  useLoginViewModel.test.ts
