[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny_http = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
tungstenite = "0.24"
