[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.11", features = ["cors"] }
futures-util = "0.3.32"
